# CNN_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  requirements.txt
cmake/: mingw-toolchain.cmake
data/: download_mnist_alternative.py
docs/: API_GUIDE.md  SETUP.md  api_reference.md  architecture.md  c_cpp_hybrid_design.md  dependency_guide.md  installation.md
docs/modules/: layers.md  layers_module.md  loss.md  loss_module.md  optimizer.md  optimizer_module.md  tensor.md  tensor_module.md
examples/: CMakeLists.txt
examples/cpp_examples/: CMakeLists.txt  mnist_training.cpp  simple_cnn.cpp
examples/python_examples/: mnist_classifier.py
include/cnn/: layers.h  loss.h  network.h  optimizer.h  tensor.h  utils.h
include/cnn_core/: conv_core.h  math_core.h  tensor_core.h
scripts/: check_dependencies.py  generate_report_img.py  setup_env.bat  setup_env.sh
src/: CMakeLists.txt
src/core_c/: CMakeLists.txt  conv_core.c  math_core.c  tensor_core.c
src/cpp/: CMakeLists.txt  layers.cpp  loss.cpp  network.cpp  optimizer.cpp  tensor.cpp  utils.cpp
src/python/: CMakeLists.txt  cnn_module.cpp  layers_binding.cpp  network_binding.cpp  tensor_binding.cpp
tests/: CMakeLists.txt  test_layers.cpp  test_network.cpp  test_tensor.cpp
